--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@
     --subtle-backgrounds:#E7E9FC;
     --helper-text:#8E8F99;
     --body-text:#434455;
+    --body-color:#FFFFFF;
 }
 
 body{
-    max-width: 1440px;
-    margin: 0;
-    padding: 0;
     font-family: 'Roboto', sans-serif;
+    color: var(--main-color);
+    background-color: #FFFFFF;
 }
 
 .list{
@@ -23,11 +23,11 @@ body{
     text-decoration: none;
 }
 
-.logo_styles{
+.header_logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
-    /* line-height: 1,3; */
+    line-height: 1.33;
     letter-spacing: 0.03em;
     color: var(--main-color);
 }
@@ -37,7 +37,7 @@ body{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
-    /* line-height: 1,3; */
+    line-height: 1.33;
     letter-spacing: 0.03em;
     color: var(--active-color);
 }
@@ -52,7 +52,6 @@ body{
 
 .header_links{
     font-weight: 500;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-color);
@@ -61,7 +60,6 @@ body{
 .header_links:hover,
 .header_links:focus{
     font-weight: 500;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--active-color);
@@ -69,8 +67,6 @@ body{
 
 .address_links{
     font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--body-text);
@@ -79,41 +75,35 @@ body{
 .address_links:hover,
 .address_links:focus{
     font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--active-color);
 }
 
 .hero{
-    min-height: 600px;
     background-color: var(--main-color);
 }
 
 .hero_title{
+    width: 496px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    color:#FFFFFF;
+    color: var(--body-color);
 }
 
 .button{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
     padding: 16px 32px;
-    gap: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #FFFFFF;
-    background: #4D5AE5;
+    color: var(--body-color);
+    background: var(--noactive-btn);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    /* border-style: none; */
+    border: none;
     background: var(--noactive-btn);
     cursor: pointer;
 }
@@ -153,17 +143,13 @@ body{
 .sub_title{
     font-weight: 500;
     font-size: 20px;
-    line-height: 0.83;
+    line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--body-text);
 }
 
 .description{
-    font-weight: 400;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--body-text);
 }
 
 .title{
@@ -172,32 +158,24 @@ body{
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: var(--main-color)
+}
+.team{
+    background-color: var(--light-mode-bg);
 }
 .footer{
-    min-height: 310px;
     background-color: var(--main-color);
 }   
 .footer_description{
-    font-weight: 400;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #E7E9FC;
+    color: var(--subtle-backgrounds);
 }
 
 .buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     padding: 12px 24px;
-    background: #F4F4FD;
+    background: var(--light-mode-bg);
     border: none;
     border-radius: 4px;
-    flex: none;
-    order: 4;
-    flex-grow: 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -213,13 +191,13 @@ body{
     justify-content: center;
     align-items: center;
     padding: 12px 24px;
-    background: #404BBF;
+    background: var(--active-color);
     border-radius: 4px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #FFFFFF;
+    color: var(--body-color);
     text-align: center;
     letter-spacing: 0.04em;
     cursor: pointer;
