--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,29 @@
     --body-text:#434455;
     --body-color:#FFFFFF;
 }
-
 body{
     font-family: 'Roboto', sans-serif;
     color: var(--main-color);
     background-color: var(--body-color);
 }
-
-.list{
-    list-style: none;
+.container{
+    max-width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
-
-.links{
-    text-decoration: none;
+.header{
+    padding: 24px 0;
+    border-bottom: 1px solid var(--subtle-backgrounds);
 }
-
+.header_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header_navigation{
+    display: flex;
+    gap:76px;
+}
 .header_logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -31,7 +39,6 @@ body{
     letter-spacing: 0.03em;
     color: var(--main-color);
 }
-
 .logo_styles:hover,
 .logo_styles:focus{
     font-family: 'Raleway', sans-serif;
@@ -41,22 +48,22 @@ body{
     letter-spacing: 0.03em;
     color: var(--active-color);
 }
-
 .web{
     color: var(--noactive-btn);
 }
-
 .studio_footer{
     color: var(--light-mode-bg);
 }
-
+.header_list{
+    display: flex;
+    gap: 40px;
+}
 .header_links{
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-color);
 }
-
 .header_links:hover,
 .header_links:focus{
     font-weight: 500;
@@ -64,26 +71,22 @@ body{
     letter-spacing: 0.02em;
     color: var(--active-color);
 }
-
 .address_links{
-    font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--body-text);
 }
-
 .address_links:hover,
 .address_links:focus{
-    font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--active-color);
 }
-
 .hero{
     background-color: var(--main-color);
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
-
 .hero_title{
     width: 496px;
     font-weight: 700;
@@ -91,9 +94,13 @@ body{
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: var(--body-color);
+    text-align: center;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 }
-
 .button{
+    display: block;
     padding: 16px 32px;
     font-weight: 500;
     font-size: 16px;
@@ -105,11 +112,12 @@ body{
     border-radius: 4px;
     border: none;
     background: var(--noactive-btn);
-    cursor: pointer;
+    margin-right: auto;
+    margin-left: auto;
 }
-
 .button:hover,
 .button:focus{
+    display: block;
     padding: 16px 32px;
     font-weight: 500;
     font-size: 16px;
@@ -120,9 +128,50 @@ body{
     border-radius: 4px;
     border:none;
     background: #404BBF;
-    cursor: pointer;
+    margin-right: auto;
+    margin-left: auto;
 }
-
+.features{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.features_list{
+    display: flex;
+    gap: 24px;
+}
+.features_item{
+    max-width: 264px;
+}
+.services{
+    padding-bottom: 120px;
+}
+.services_list{
+    display: flex;
+    gap: 24px;
+}
+.service_title{
+    max-width: 324px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+}
+.team{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.team_title{
+    max-width: 163px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+}
+.team_list{
+    display: flex;
+    gap: 24px;
+}
+.team_item{
+    background-color: var(--body-color);
+}
 .visually-hidden{
     position: absolute;
     white-space: nowrap;
@@ -135,19 +184,16 @@ body{
     clip-path: inset(50%);
     margin: -1px; 
 }
-
 .sub_title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
 }
-
 .description{
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-
 .title{
     font-weight: 700;
     font-size: 36px;
@@ -158,19 +204,29 @@ body{
 .team{
     background-color: var(--light-mode-bg);
 }
+.team_text{
+    text-align: center;
+    padding: 32px 0;
+
+}
+.team_text_margin{
+    margin-bottom: 8px;
+}
 .footer{
     background-color: var(--main-color);
+    padding: 100px 0;
 }   
 .footer_description{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--subtle-backgrounds);
+    max-width: 264px;
+    margin-top: 16px;
 }
-
 .buttons{
     padding: 12px 24px;
-    background: var(--light-mode-bg);
-    border: none;
+    background-color: var(--light-mode-bg);
+    border: 1px solid var(--subtle-backgrounds);
     border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
@@ -178,19 +234,41 @@ body{
     color: var(--noactive-btn);
     text-align: center;
     letter-spacing: 0.04em;
-    cursor: pointer;
 }
 .buttons:hover,
 .buttons:focus{
     padding: 12px 24px;
-    background: var(--active-color);
+    background-color: var(--active-color);
+    box-sizing: border-box;
     border-radius: 4px;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
     color: var(--body-color);
-    text-align: center;
     letter-spacing: 0.04em;
-    cursor: pointer;
+}
+.portfolio{
+
+    padding-top: 96px;
+}
+.btn_list{
+    display: flex;
+    margin-bottom: 72px;
+    justify-content: center;
+    gap: 24px;
+}
+.photo_list{
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap:24px;
+}
+.photo_item{
+    background-color: var(--body-color);
+}
+.photo_text{
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+    border: 1px solid var(--subtle-backgrounds)
 }
