index's svg added

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,9 @@ body{
 }
 .hero{
     background-color: var(--main-color);
+    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/people_office_bg.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
     padding-top: 188px;
     padding-bottom: 188px;
 }
