--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --helper-text:#8E8F99;
     --body-text:#434455;
     --body-color:#FFFFFF;
+    --green-icon:#31D0AA;
 }
 body{
     font-family: 'Roboto', sans-serif;
@@ -19,7 +20,6 @@ body{
     padding: 0 15px;
 }
 .header{
-    padding: 24px 0;
     border-bottom: 1px solid var(--subtle-backgrounds);
 }
 .header_container{
@@ -29,6 +29,7 @@ body{
 }
 .header_navigation{
     display: flex;
+    align-items: center;
     gap:76px;
 }
 .header_logo{
@@ -59,6 +60,8 @@ body{
     gap: 40px;
 }
 .header_links{
+    display: block;
+    padding: 24px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -105,6 +108,7 @@ body{
 .button{
     display: block;
     padding: 16px 32px;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -202,6 +206,7 @@ body{
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .description{
     line-height: 1.5;
@@ -213,6 +218,8 @@ body{
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 72px;
 }
 .team{
     background-color: var(--light-mode-bg);
@@ -222,14 +229,15 @@ body{
     padding: 32px 0;
 
 }
-.team_text_margin{
-    margin-bottom: 8px;
-}
+
 .social_list{
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    gap: 8px;
-    margin-top: 10px;
+    align-items: center;
+    padding: 0px;
+    gap: 24px;
+    margin-top: 8px;
 }
 .social_link{
     display: flex;
@@ -253,15 +261,102 @@ body{
 .team_social_icon{
     fill: var(--light-mode-bg);
 }
-.footer{
+.customers{
+    padding-top: 130px;
+    padding-bottom: 120px;
+}
+.customers_title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+    color: var(--main-color);
+}
+.customers_list {
+    display: flex;
+    justify-content: center;
+}
+
+.customers_item {
+    width: 168px;
+    height: 88px;
+}
+
+.customers_item:not(:last-child) {
+    margin-right: 24px;
+}
+
+.customers_link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--helper-text);
+    border-radius: 4px;
+    fill: var(--helper-text);
+}
+
+.customers_link:hover,
+.customers_link:focus {
+    border-color: var(--active-color);
+}
+
+.customers_link:hover .customers_icon,
+.customers_link:focus .customers_icon {
+    fill: var(--active-color);
+}
+.footer_section{
     background-color: var(--main-color);
-    padding: 100px 0;
-}   
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.footer_flex_container{
+    display: flex;
+}
+.social_media{
+    display: flex;
+    flex-direction: column;
+    margin-left: 120px;
+}
+.social_media_text{
+    color: var(--body-color);
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+.social_media_list{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+.social_media_item{
+    width: 40px;
+    height: 40px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
+.social_media_link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    fill: var(--light-mode-bg);
+}
+.social_media_item:hover,
+.social_media_item:focus {
+    background-color: var(--green-icon);
+}
 .footer_description{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--subtle-backgrounds);
-    max-width: 264px;
+    width: 264px;
     margin-top: 16px;
 }
 .buttons{
@@ -298,7 +393,7 @@ body{
     justify-content: center;
     gap: 24px;
 }
-.photo_list{
+ .photo_list{
     display: flex;
     flex-wrap: wrap;
     row-gap: 48px;
@@ -312,4 +407,27 @@ body{
     padding-bottom: 32px;
     padding-left: 16px;
     border: 1px solid var(--subtle-backgrounds)
+}
+
+.photo_list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 120px;
+}
+
+.photo_notes{
+    text-align: left;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+    border-left: 1px solid var(--subtle-backgrounds);
+    border-bottom: 1px solid var(--subtle-backgrounds);
+    border-right: 1px solid var(--subtle-backgrounds);
+}
+.photo-item-link {
+    display: block;
+}
+.photo-item-link:hover,
+.photo-item-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
