--- a/css/style.css
+++ b/css/style.css
@@ -207,10 +207,12 @@ body{
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
+    color: var(--main-color);
 }
 .description{
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: var(--body-text);
 }
 .title{
     font-weight: 700;
@@ -393,7 +395,7 @@ body{
     justify-content: center;
     gap: 24px;
 }
- .photo_list{
+.photo_list{
     display: flex;
     flex-wrap: wrap;
     row-gap: 48px;
