--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ body{
     color: var(--body-color);
     letter-spacing: 0.04em;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border: none;
+    border-color: var(--active-color);
 }
 .portfolio{
 
