--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,20 @@ body{
     align-items: center;
     gap:76px;
 }
+.header_item{
+    position: relative;
+}
+.active::after{
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: var(--active-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 2px;
+}
 .header_logo{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
