--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     --body-text:#434455;
     --body-color:#FFFFFF;
     --green-icon:#31D0AA;
+    --modal-background:#2E2F42;
+    --modal-blue-background:#2E2F4266;
 }
 ul{
     list-style: none;
@@ -103,6 +105,7 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header_links:hover,
 .header_links:focus{
@@ -115,6 +118,7 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--body-text);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address_links:hover,
 .address_links:focus{
@@ -159,6 +163,7 @@ body{
     background: var(--noactive-btn);
     margin-right: auto;
     margin-left: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 .button:focus{
@@ -299,6 +304,7 @@ body{
     border-radius: 50%;
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_link:hover,
 .social_link:focus{
@@ -350,6 +356,7 @@ body{
     border: 1px solid var(--helper-text);
     border-radius: 4px;
     fill: var(--helper-text);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers_link:hover,
@@ -396,6 +403,7 @@ body{
     fill: var(--light-mode-bg);
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_link:hover,
 .social_media_link:focus{
@@ -419,6 +427,7 @@ body{
     color: var(--noactive-btn);
     text-align: center;
     letter-spacing: 0.04em;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .buttons:hover,
 .buttons:focus{
@@ -476,11 +485,91 @@ body{
     border-bottom: 1px solid var(--subtle-backgrounds);
     border-right: 1px solid var(--subtle-backgrounds);
 }
-.photo-item-link {
+.photo_item_link {
     display: block;
     color: var(--body-text);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.photo-item-link:hover,
-.photo-item-link:focus {
+.photo_item_link:hover,
+.photo_item_link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.photo_item_wrapper {
+    position: relative;
+    overflow: hidden;
+}
+.overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    transform: translate(0, 100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--light-mode-bg);
+    font-weight: 400;
+    text-align: left;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: var(--noactive-btn);
+}
+.photo_item_link:hover .overlay,
+.photo_item_link:focus .overlay {
+    transform: translate(0, 0);
+}
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: var(--modal-blue-background);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0);
+    pointer-events: none;
+}
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 408px;
+    height: 576px;
+    transform: scale(1) translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #FCFCFC;
+}
+.modal_close_btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: var(--subtle-backgrounds);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal_close_btn_icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal_close_btn:hover,
+.modal_close_btn:focus {
+    border-color: #404BBF;
+    background-color: var(--active-color);
+}
+.modal_close_btn:hover .modal_close_btn_icon,
+.modal_close_btn:focus .modal_close_btn_icon {
+    fill: #FFFFFF;
 }
