--- a/css/style.css
+++ b/css/style.css
@@ -56,14 +56,12 @@ body{
     align-items: center;
     gap:76px;
 }
-.header_item{
-    position: relative;
-}
 .active::after{
     display: block;
     content: "";
     width: 100%;
     height: 4px;
+    bottom: -1px;
     background-color: var(--active-color);
     position: absolute;
     bottom: 0;
@@ -96,16 +94,16 @@ body{
 .header_list{
     display: flex;
     gap: 40px;
-    position: relative;
 }
 .header_links{
     display: block;
+    position: relative;
     padding: 24px 0;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header_links:hover,
 .header_links:focus{
@@ -118,7 +116,7 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--body-text);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address_links:hover,
 .address_links:focus{
@@ -167,19 +165,7 @@ body{
 }
 .button:hover,
 .button:focus{
-    display: block;
-    padding: 16px 32px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--body-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border:none;
     background: #404BBF;
-    margin-right: auto;
-    margin-left: auto;
 }
 .features{
     padding-top: 120px;
@@ -200,7 +186,7 @@ body{
     align-items: center;
 }
 .features_item{
-    max-width: 264px;
+    width: 264px;
 }
 .services{
     padding-bottom: 120px;
@@ -210,7 +196,7 @@ body{
     gap: 24px;
 }
 .service_title{
-    max-width: 324px;
+    width: 324px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 72px;
@@ -220,7 +206,7 @@ body{
     padding-bottom: 120px;
 }
 .team_title{
-    max-width: 163px;
+    width: 163px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 72px;
@@ -280,7 +266,6 @@ body{
 }
 .social_list{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 0px;
@@ -295,6 +280,7 @@ body{
     border-radius: 50%;
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_link:hover{
     display: flex;
@@ -304,7 +290,6 @@ body{
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_link:hover,
 .social_link:focus{
@@ -356,7 +341,7 @@ body{
     border: 1px solid var(--helper-text);
     border-radius: 4px;
     fill: var(--helper-text);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers_link:hover,
@@ -431,15 +416,8 @@ body{
 }
 .buttons:hover,
 .buttons:focus{
-    padding: 12px 24px;
     background-color: var(--active-color);
-    box-sizing: border-box;
-    border-radius: 4px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
     color: var(--body-color);
-    letter-spacing: 0.04em;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-color: var(--active-color);
 }
@@ -477,7 +455,6 @@ body{
 }
 
 .photo_notes{
-    text-align: left;
     padding-top: 32px;
     padding-bottom: 32px;
     padding-left: 16px;
@@ -488,11 +465,11 @@ body{
 .photo_item_link {
     display: block;
     color: var(--body-text);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transition 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .photo_item_link:hover,
 .photo_item_link:focus{
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .photo_item_wrapper {
     position: relative;
@@ -504,11 +481,13 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
     transform: translate(0, 100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--light-mode-bg);
     font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     text-align: left;
     padding-left: 32px;
     padding-right: 32px;
@@ -545,6 +524,7 @@ body{
     transform: scale(1) translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #FCFCFC;
+    border-radius: 4px;
 }
 .modal_close_btn {
     position: absolute;
@@ -559,14 +539,13 @@ body{
     background: var(--subtle-backgrounds);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal_close_btn_icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal_close_btn:hover,
 .modal_close_btn:focus {
-    border-color: #404BBF;
     background-color: var(--active-color);
 }
 .modal_close_btn:hover .modal_close_btn_icon,
