--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
     background-color: var(--body-color);
 }
 .container{
-    max-width: 1158px;
+    width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
 }
