--- a/css/style.css
+++ b/css/style.css
@@ -221,17 +221,15 @@ body{
 .team_item{
     background-color: var(--body-color);
 }
-.visually-hidden{
+.visually_hidden{
     position: absolute;
-    white-space: nowrap;
-    width: 1px; 
+    width: 1px;
     height: 1px;
+    margin: -1px;
+    padding: 0;
     overflow: hidden;
     border: 0;
-    padding: 0;
     clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px; 
 }
 .sub_title{
     font-weight: 500;
@@ -344,7 +342,7 @@ body{
     border: 1px solid var(--helper-text);
     border-radius: 4px;
     fill: var(--helper-text);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .customers_link:hover,
@@ -397,12 +395,50 @@ body{
 .social_media_link:focus{
     background-color: var(--green-icon);
 }
+.footer_p {
+    margin-bottom: 16px;
+
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    text-align: left;
+    color: var(--body-color);
+}
 .footer_description{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--subtle-backgrounds);
     width: 264px;
     margin-top: 16px;
+}
+.subscribe {
+    margin-left: auto;
+}
+.email{
+    width: 264px;
+    height: 40px;
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-right: 24px;
+    color: var(--light-mode-bg);
+    border: 1px solid #FFFFFF4D;
+    border-radius: 4px;
+    background-color: var(--main-color);
+}
+.subscribe_form{
+    display: flex;
+}
+.subscribe_button{
+    display: flex;
+    padding: 8px 24px;
+    border: 0;
+    border-radius: 4px;
+    background-color: var(--noactive-btn);
+    color: var(--body-color);
+}
+.subscribe_span {
+    margin-right: 16px;
 }
 .buttons{
     padding: 12px 24px;
@@ -467,7 +503,7 @@ body{
 .photo_item_link {
     display: block;
     color: var(--body-text);
-    transition: transition 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .photo_item_link:hover,
 .photo_item_link:focus{
@@ -527,6 +563,7 @@ body{
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #FCFCFC;
     border-radius: 4px;
+    padding: 72px 24px 24px;
 }
 .modal_close_btn {
     position: absolute;
@@ -553,4 +590,124 @@ body{
 .modal_close_btn:hover .modal_close_btn_icon,
 .modal_close_btn:focus .modal_close_btn_icon {
     fill: #FFFFFF;
+}
+.modal>p {
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 14px;
+    color: #2E2F42;
+}
+.modal_form {
+    display: flex;
+    flex-direction: column ;
+}
+.modal_form_input_desc {
+    display: block;
+    font-size: 12px;
+    line-height: 1.33;
+    color: var(--light-slate-color);
+    margin-bottom: 4px;
+}
+.modal_form_input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #21212133;
+    border-radius: 4px;
+    padding-left: 38px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    margin-bottom: 8px;
+    color: #2E2F42;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal_form_input:focus {
+    outline: none;
+    border-color: #4D5AE5;
+}
+.modal_form_message {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    border: 1px solid #21212133;
+    border-radius: 4px;
+    padding: 8px 16px;
+    margin-bottom: 16px;
+    color: #2E2F42;
+    font-size: 12px;
+    line-height: 1.33;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal_form_message::placeholder {
+    font-size: 12px;
+    color: #75757580;
+}
+.modal_form_message:focus {
+    outline: none;
+    border-color: #4D5AE5;
+}
+.modal_form_input_wrapper {
+    display: block;
+    position: relative;
+}
+.modal_form_input_icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: var(--main-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal_form_input:focus + .modal_form_input_icon {
+    fill: #4D5AE5;
+}
+.modal_form_check_desc::before {
+    content: "";
+    display: block;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #2E2F42;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 8px;
+}
+.modal_form_check_desc {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 1.33;
+    color: #757575;
+    margin-bottom: 24px;
+}
+.modal_form_check_desc a {
+    color: #4D5AE5;
+}
+.modal_form_check:checked + .modal_form_check_desc::before {
+    background-color: #404BBF;
+    border-color: #404BBF;
+    background-image: url(../images/check-modal.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.modal_form_check:focus + .modal_form_check_desc::before {
+    outline: 1px solid #404BBF;
+}
+.modal_form_submit{
+    align-self: center;
+    padding: 16px 32px;
+    width: 170px;
+    height: 56px;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #FFFFFF;
+    background: var(--noactive-btn);
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal_form_submit:hover,
+.modal_form_submit:focus {
+    border-color: #404BBF;
+    background-color: var(--active-color);
 }
