--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
     background-color: var(--body-color);
 }
 .container{
-    width: 1158px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -114,6 +114,9 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--active-color);
+}
+.address{
+    display: none;
 }
 .address_links{
     line-height: 1.5;
@@ -205,8 +208,9 @@ body{
     margin-bottom: 72px;
 }
 .team{
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 128px;
+    background-color: var(--light-mode-bg);
 }
 .team_title{
     width: 163px;
@@ -216,10 +220,15 @@ body{
 }
 .team_list{
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    row-gap: 72px;
 }
 .team_item{
+    width: 100%;
     background-color: var(--body-color);
+}
+.team_descr{
+    margin-bottom: 8px;
 }
 .visually_hidden{
     position: absolute;
@@ -253,15 +262,13 @@ body{
     text-align: center;
     margin-bottom: 72px;
 }
-.team{
-    background-color: var(--light-mode-bg);
-}
 .team_text{
     text-align: center;
-    padding: 32px 0;
+    padding: 32px 14px;
 
 }
 .team_item{
+    width: 100%;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
