--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@ body{
     background-color: var(--body-color);
 }
 .container{
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 16px;
 }
 .header{
     border-bottom: 1px solid var(--subtle-backgrounds);
@@ -221,11 +221,15 @@ body{
 .team_list{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     row-gap: 72px;
+    column-gap: 24px;
 }
 .team_item{
-    width: 100%;
+    max-width: 100%;
     background-color: var(--body-color);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 .team_descr{
     margin-bottom: 8px;
@@ -266,11 +270,6 @@ body{
     text-align: center;
     padding: 32px 14px;
 
-}
-.team_item{
-    width: 100%;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
 }
 .social_list{
     display: flex;
@@ -313,8 +312,8 @@ body{
     fill: var(--light-mode-bg);
 }
 .customers{
-    padding-top: 130px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 .customers_title{
     font-weight: 700;
@@ -328,16 +327,14 @@ body{
 }
 .customers_list {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 72px;
 }
 
 .customers_item {
-    width: 168px;
+    width: calc((100% - 16px) / 2);
     height: 88px;
-}
-
-.customers_item:not(:last-child) {
-    margin-right: 24px;
 }
 
 .customers_link{
