--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ body{
     padding-top: 8px;
     padding-bottom: 8px;
     margin-right: 24px;
-    color: var(--light-mode-bg);
+    color: rgba(255, 255, 255, 0.6);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
