--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,18 +1,20 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
     .container{
-        max-width: 582px;
+        max-width: 736px;
     }
     /* Features */
-
+    .features_container{
+        width: 736px;
+    }
     .features_list{
-        width: 100%;
-        display: flex;
-        flex-wrap: nowrap;
-        column-gap: 24px;
-        row-gap: 72px;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
     .features_item{
+        display: flex;
         width: calc((100% - 24px) / 2);
+        align-items: flex-start;
+        flex-direction: column;
     }
 
     /* OUR_TEAM */
