header for all sizes

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -2,6 +2,53 @@
     .container{
         max-width: 736px;
     }
+
+    /* ======= HEADER ======== */
+    .header{
+        padding-top: 24px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .header_container{
+        display: flex;
+        gap: 118px;
+    }
+    .header_navigation{
+        gap:120px
+    }
+    .header_container{
+        display: flex;
+        justify-content: space-between;
+        padding-right: 0;
+        padding-left: 0;
+    }
+    .header_list{
+        display: flex;
+        position: relative;
+        gap: 40px;
+    }
+    .header_links{
+        padding-top: 0;
+    }
+    .address{
+        display: flex;
+        gap: 4px;
+        padding-bottom: 10px;
+    }
+    .burger_button{
+        display: none;
+    }
+    .header_logo{
+        padding-bottom: 24px;
+    }
+    .address_links{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.33;
+    }
+    .services{
+        display: none;
+    }
     /* Features */
     .features_container{
         width: 736px;
