--- a/css/desktop.css
+++ b/css/desktop.css
@@ -2,6 +2,98 @@
     .container{
         max-width: 1158px;
     }
+
+    /* =======header======== */
+    .header{
+        padding-top: 0;
+        border-bottom: 1px solid var(--subtle-backgrounds);
+    }
+    .header_container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .header_navigation{
+        display: flex;
+        align-items: center;
+        gap:76px;
+    }
+    .header_links.active{
+        color: var(--active-color);
+    }
+    .active::after{
+        display: block;
+        content: "";
+        width: 100%;
+        height: 4px;
+        bottom: -1px;
+        background-color: var(--active-color);
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        border-radius: 2px;
+    }
+    .header_logo{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.33;
+        letter-spacing: 0.03em;
+        color: var(--main-color);
+    }
+    .logo_styles:hover,
+    .logo_styles:focus{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.33;
+        letter-spacing: 0.03em;
+        color: var(--active-color);
+    }
+    .web{
+        color: var(--noactive-btn);
+    }
+    .studio_footer{
+        color: var(--light-mode-bg);
+    }
+    .header_list{
+        display: flex;
+        gap: 40px;
+    }
+    .header_links{
+        display: block;
+        position: relative;
+        padding: 24px 0;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--main-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .header_links:hover,
+    .header_links:focus{
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--active-color);
+    }
+    .address{
+        display: flex;
+    }
+    .address_list{
+        display: flex;
+        gap:40px;
+    }
+    .address_links{
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+    .burger_button{
+        display: none;
+    }
+
     /* Features */
     
     .features{
