--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,11 +2,32 @@
     .container{
         max-width: 426px;
     }
+
+    /* burger */
+    .burger-btn {
+        display: block;
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        margin: 0;
+        width: 32px;
+        height: 22px;
+      }
+      .burger-icon {
+        stroke: var(--main-color);
+        transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      .burger-icon:hover,
+      .burger-icon:focus{
+        stroke: var(--active-color);
+      }
+
+    /* OUR_TEAM */
+
     .team{
         padding-left: 82px;
         padding-right: 82px;
     }
-
     /* Customers */
 
     .customers{
