--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body{
     padding: 0 16px;
 }
 .header{
+    padding-top: 24px;
     border-bottom: 1px solid var(--subtle-backgrounds);
 }
 .header_container{
@@ -58,6 +59,9 @@ body{
 }
 .header_links.active{
     color: var(--active-color);
+}
+.link{
+    display: block;
 }
 .active::after{
     display: block;
@@ -95,8 +99,7 @@ body{
     color: var(--light-mode-bg);
 }
 .header_list{
-    display: flex;
-    gap: 40px;
+    display: none;
 }
 .header_links{
     display: block;
@@ -119,15 +122,14 @@ body{
     display: none;
 }
 .address_links{
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
     color: var(--body-text);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address_links:hover,
 .address_links:focus{
-    line-height: 1.5;
-    letter-spacing: 0.02em;
     color: var(--active-color);
 }
 .hero{
