--- a/css/style.css
+++ b/css/style.css
@@ -373,14 +373,15 @@ body{
 }
 .footer_section{
     background-color: var(--main-color);
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-.footer_flex_container{
-    display: flex;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .social_media{
-    margin-left: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .social_media_text{
     color: var(--body-color);
@@ -416,21 +417,38 @@ body{
     margin-bottom: 16px;
     line-height: 1.5;
     font-weight: 500;
-    text-align: left;
+    text-align: center;
     color: var(--body-color);
 }
 .footer_description{
+    text-align: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--subtle-backgrounds);
     width: 264px;
     margin-top: 16px;
 }
+.footer_logo_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer_flex_container{
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+}
 .subscribe {
-    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+}
+.subscribe_form{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 .email{
-    width: 264px;
+    width: 100%;
     height: 40px;
     font-weight: 400;
     font-size: 12px;
@@ -439,7 +457,6 @@ body{
     padding-left: 16px;
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-right: 24px;
     color: rgba(255, 255, 255, 0.6);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -464,8 +481,8 @@ body{
     background-color: var(--noactive-btn);
     color: var(--body-color);
 }
-.subscribe_span {
-    margin-right: 16px;
+.svg{
+    margin-left: 16px;
 }
 .buttons{
     padding: 12px 24px;
