good night my litle pony

--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,7 @@ body{
     padding-right: 15px;
 }
 .social_media{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -430,15 +431,17 @@ body{
 }
 .footer_logo_container{
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
 }
 .footer_flex_container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 72px;
 }
 .subscribe {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
