--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 1200px) {
     .container{
         max-width: 1158px;
+        margin: 0 auto;
     }
-
     /* =======header======== */
     .header{
         padding-top: 0;
@@ -12,6 +12,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin: 0 auto;
     }
     .header_navigation{
         display: flex;
@@ -171,12 +172,23 @@
     .footer_flex_container{
         display: flex;
         flex-direction: row;
+        gap: 80px;
     }
     .footer_tablet_container{
         flex-direction: row;
+        gap: 120px;
     }
     .footer_subscribe{
         text-align: left;
+    }
+    .footer_logo_container{
+        align-items:start;
+    }
+    .footer_description{
+        text-align: start;
+    }
+    .social_media{
+        align-items: start;
     }
     .email{
         width: 264px;
@@ -200,10 +212,14 @@
     }
     .subscribe_form{
         display: flex;
+        flex-direction: row;
+        gap: 0;
+
     }
     .subscribe_button{
         display: flex;
         padding: 8px 24px;
+        margin: 0;
         border: 0;
         border-radius: 4px;
         background-color: var(--noactive-btn);
