--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a{
 }
 img{
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: auto;
 }
 address{
@@ -42,16 +42,15 @@ body{
 .container{
     max-width: 320px;
     margin: 0 auto;
-    padding: 0 16px;
 }
 .header{
     padding-top: 24px;
+    padding-bottom: 24px;
     border-bottom: 1px solid var(--subtle-backgrounds);
 }
 .header_container{
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 .header_navigation{
     display: flex;
@@ -134,7 +133,7 @@ body{
     color: var(--active-color);
 }
 .hero{
-    max-width: 1440px;
+    width: 1440px;
     margin: 0 auto;
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/people_office_bg.jpeg);
     background-size: cover; 
@@ -459,7 +458,7 @@ body{
     height: 40px;
 }
 .email{
-    width: 398px;
+    width: 100%;
     height: auto;
     font-weight: 400;
     font-size: 12px;
