--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ button{
     cursor:pointer;
 }
 body{
-    margin: 0;
     font-family: 'Roboto', sans-serif;
     color: var(--main-color);
     background-color: var(--body-color);
@@ -133,7 +132,7 @@ body{
     color: var(--active-color);
 }
 .hero{
-    width: 1440px;
+    width: 100%;
     margin: 0 auto;
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/people_office_bg.jpeg);
     background-size: cover; 
@@ -142,10 +141,10 @@ body{
     padding-bottom: 188px;
 }
 .hero_title{
-    width: 496px;
+    width: 320px;
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     color: var(--body-color);
     text-align: center;
@@ -611,8 +610,8 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 408px;
-    height: 584px;
+    width: 392px;
+    min-height: 586px;
     transform: scale(1) translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #FCFCFC;
