--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@ button{
     cursor:pointer;
 }
 body{
+    margin: 0;
     font-family: 'Roboto', sans-serif;
     color: var(--main-color);
     background-color: var(--body-color);
 }
 .container{
     max-width: 320px;
-    margin: 0 auto;
 }
 .header{
     padding-top: 24px;
@@ -134,7 +134,7 @@ body{
 .hero{
     width: 100%;
     margin: 0 auto;
-    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/people_office_bg.jpeg);
+    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/mobile_bg.jpg);
     background-size: cover; 
     background-repeat: no-repeat;
     padding-top: 188px;
@@ -768,105 +768,138 @@ body{
 }
 
 /* =========MOBILE MENU========== */
-.mobile-menu-open {
+.menu-open{
+    width: 32px;
+    height: 22px;
+    background-color: transparent;
     border: none;
-    background-color: var(--body-color);
-  }
-  .mobile-menu {
+    stroke: var(--main-color);
+}
+.mob_menu {
     position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    padding-top: 80px;
-    padding-left: 40px;
-    padding-bottom: 40px;
-    z-index: 1000;
-    background-color: var(--active-color);
-    box-shadow: 0 0 0 100vmax rgb(red, green, blue);
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      visibility  250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
-  .mobile-menu__close-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 40px;
-    right: 70px;
+    width: 100%;
+    height: 100%;
     background-color: var(--body-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0;
-    border-radius: 50%;
+    top: 0;
+    z-index: 1;
+    padding: 40px;
+    overflow: hidden;
+}
+.menu_container{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+}
+.menu-close {
+    display: flex;
     width: 24px;
     height: 24px;
-  
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-menu-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    
-  }
-  .mobile-menu-link {
+    background-color: var(--subtle-backgrounds);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 32px;
+}
+.menu-close:hover,
+.menu-close:focus {
+  fill: var(--body-color);
+  background-color: var(--noactive-btn);
+}
+.mobile-close:active {
+    fill: var(--body-color);
+    background-color: var(--noactive-btn);
+}
+.menu-close-icon {
+}
+.mob_menu_list {
+    margin-bottom: 50px;
+}
+.mob_menu_item:not(:last-child) {
+    margin-bottom: 24px;
+}
+.mob_menu_link{
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
-  
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
     color: var(--main-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob_menu_link:hover,
+.mob_menu_link:hover{
+    color: var(--noactive-btn);
+}
+.mob_menu_item > .page-active {
+    color: var(--noactive-btn);
   }
-  .mobile-menu-link:hover,
-  .mobile-menu-link:focus {
+.mob_menu_tel {
+    display: block;
+    width: 100%;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.1;
+    text-transform: capitalize;
     color: var(--active-color);
-  }
-  .mobile-menu-contacts-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    justify-content: center;
-  }
-  .mobile-menu-link-contacts {
-    color: var(--active-color);
-  }
-  .mobile-menu-link-contact-phone {
-    color: #4d5ae5;
-  }
-  .mobile-menu-contact-mail {
-    color: var(--main-color);
+    margin-bottom: 40px;
+}
+.mob_menu_email {
+    display: block;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-  }
-  .mobile-menu-contact-phone {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    color: #4d5ae5;
-  }
-  .mobile-menu-social-list {
+    letter-spacing: 0.02em;
+    color: var(--body-text);
+    margin-bottom: 116px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+.mob_menu_email:hover,
+.mob_menu_email:focus{
+    color: var(--noactive-btn);
+}
+.mob_social_list {
     display: flex;
-    gap: 56px;
-  }
-  .mobile-menu-social-link {
-    background-color: #4d5ae5;
+    flex-direction: row;
+    gap: 25px;
+}
+.mob_social_link {
     display: flex;
-    justify-content: center;
-    align-items: center;
     width: 40px;
     height: 40px;
+    background-color: var(--noactive-btn);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob_social_link:hover,
+.mob_social_link:focus {
+  background-color: var(--active-color);
+}
+.mob_menu_tel{
+
+}
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 479px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 479px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 479px) {
+      .hero{
+      width: 100%;
+      background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/services/hero_mobile@2x.jpg);
+      background-size: cover;
+      }   
   }
