--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,7 @@
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px)  and (max-width: 767px) {
     .container{
         max-width: 426px;
+        margin: 0 auto;
     }
 
     /* burger */
@@ -21,7 +22,15 @@
       .burger-icon:focus{
         stroke: var(--active-color);
       }
-
+      .hero{
+        width: 100%;
+        margin: 0 auto;
+        background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/mobile_bg.jpg);
+        background-size: cover; 
+        background-repeat: no-repeat;
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
     /* OUR_TEAM */
 
     .team{
@@ -37,5 +46,27 @@
     .customers_item{
         width: calc((100% - 16px) / 2)
     }
+
+
+
+    .mob_menu_tel{
+      font-size: 36px;
+    }
     
+    .mob_social_list{
+      gap: 56px;
+    }
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 480px) and (max-width: 767px),
+    screen and (min-resolution: 192dpi) and (min-width: 480px) and (max-width: 767px),
+    screen and (min-resolution: 2dppx) and (min-width: 480px) and (max-width: 767px) {
+        .hero{
+        width: 100%;
+        background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/backgrounds/hero_bg@2x.jpg);
+        background-size: cover;
+        }   
+    }
 }
