--- a/css/desktop.css
+++ b/css/desktop.css
@@ -96,6 +96,12 @@
         display: none;
     }
 
+    .hero{
+        width: 100%;
+        background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/desktop_bg.jpg);
+        background-size: cover; 
+        background-repeat: no-repeat;
+    }
     /* Features */
     
     .features{
@@ -239,14 +245,11 @@
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
     screen and (min-resolution: 192dpi) and (min-width: 1200px),
     screen and (min-resolution: 2dppx) and (min-width: 1200px) {
-        .hero-section {
-        width: 100%;
-        background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/backgrounds/people-office_bg@2x.jpg);
-        background-size: cover;
-        }   
+        .hero{
+            width: 100%;
+            background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/desktop_bg@2x.jpg);
+            background-size: cover; 
+            background-repeat: no-repeat;
+            }
     }
 }
