--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,13 +1,9 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-    .container{
-        max-width: 552px;
-        padding-left: 16px;
-        padding-right: 16px;
-    }
     .header{
         padding-left: 0;
     }
     .sub_container{
+        width: 552px;
         margin: 0 auto;
     }
     body{
@@ -16,8 +12,6 @@
     /* ======= HEADER ======== */
     .header{
         padding-top: 24px;
-        padding-left: 16px;
-        padding-right: 16px;
         padding-bottom: 0;
     }
     .header_navigation{
@@ -56,6 +50,10 @@
     .services{
         display: none;
     }
+    .hero_title{
+        width: 496px;
+        font-size: 56px;
+    }
     /* Features */
     .features_container{
         min-width: 736px;
@@ -74,8 +72,7 @@
 
     .hero{
         width: 100%;
-        margin: 0 auto;
-        background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/tablet_hero@1x.jpg);
+        background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/tablet_bg.jpg);
         background-size: cover; 
         background-repeat: no-repeat;
         padding-top: 188px;
@@ -109,9 +106,6 @@
     }
 
     /* ============= FOOTER ================== */
-    .footer_flex_container{
-        margin: 0 auto;
-    }
     .footer{
         padding: 96px 0;
     }
@@ -122,6 +116,7 @@
         display: flex;
         flex-direction: row;
         gap: 24px;
+        margin-bottom: 72px;
     }
     .footer_description{
         text-align: start;
@@ -161,13 +156,10 @@
     screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px),
     screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
         .hero{
-        width: 100%;
-        background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/backgrounds/tablet_hero@2x.jpg);
-        background-size: cover;
+            width: 100%;
+            background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/tablet_bg@2x.jpg);
+            background-size: cover; 
+            background-repeat: no-repeat;
         }   
     }
 }
