--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,7 @@ body{
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),url(../images/backgrounds/mobile_bg.jpg);
     background-size: cover; 
     background-repeat: no-repeat;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding: 112px 0;
 }
 .hero_title{
     width: 283px;
@@ -149,7 +148,7 @@ body{
     letter-spacing: 0.02em;
     color: var(--body-color);
     text-align: center;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -447,7 +446,6 @@ body{
     display: flex;
     flex-direction: column;
     gap: 72px;
-    margin-bottom: 72px;
 }
 .subscribe {
     width: 100%;
@@ -530,11 +528,13 @@ body{
 }
 .photo_list{
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     row-gap: 48px;
     column-gap:24px;
 }
 .photo_item{
+    width: calc((100% - 48) / 3);
     background-color: var(--body-color);
 }
 .photo_text{
@@ -782,12 +782,15 @@ body{
 }
 .mob_menu {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: var(--body-color);
     top: 0;
     z-index: 1;
-    padding: 40px;
+    padding-top: 24px;
+    padding-right: 24px;
+    padding-left: 40px;
+    padding-bottom: 40px;
     overflow: hidden;
 }
 .menu_container{
@@ -819,9 +822,13 @@ body{
     fill: var(--body-color);
     background-color: var(--noactive-btn);
 }
-.mob_menu_list {
-    margin-bottom: 50px;
+.menu_midle_content{
+    margin-top: 284px;
+    margin-bottom: 48px;
 }
+/* .mob_menu_list {
+    margin-bottom: 50px;
+} */
 .mob_menu_item:not(:last-child) {
     margin-bottom: 24px;
 }
@@ -858,7 +865,6 @@ body{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--body-text);
-    margin-bottom: 116px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .mob_menu_email:hover,
@@ -879,7 +885,6 @@ body{
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    margin-bottom: 32px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mob_social_link:hover,
